WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196126
REGRESSION (
r242687
): Flicker when pinch-zooming pages in macOS Safari
https://bugs.webkit.org/show_bug.cgi?id=196126
Summary
REGRESSION (r242687): Flicker when pinch-zooming pages in macOS Safari
Simon Fraser (smfr)
Reported
2019-03-21 19:07:32 PDT
REGRESSION (
r242687
): Flicker when pinch-zooming pages in macOS Safari
Attachments
Patch
(5.10 KB, patch)
2019-03-21 19:08 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(5.13 KB, patch)
2019-03-21 19:12 PDT
,
Simon Fraser (smfr)
koivisto
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-03-21 19:08:29 PDT
Comment hidden (obsolete)
Created
attachment 365665
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-03-21 19:08:31 PDT
<
rdar://problem/49095791
>
EWS Watchlist
Comment 3
2019-03-21 19:10:25 PDT
Comment hidden (obsolete)
Attachment 365665
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 4
2019-03-21 19:12:46 PDT
Created
attachment 365667
[details]
Patch
Antti Koivisto
Comment 5
2019-03-22 09:11:49 PDT
Comment on
attachment 365667
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=365667&action=review
> Source/WebKit/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.h:91 > + enum class FlushingForTransientZoom { Yes, No };
Something like enum class FlushType { Normal, TransientZoom }; is another option here.
Simon Fraser (smfr)
Comment 6
2019-03-22 09:39:30 PDT
https://trac.webkit.org/changeset/243381/webkit
Simon Fraser (smfr)
Comment 7
2019-03-25 16:11:37 PDT
Followup fix in
https://trac.webkit.org/r243469
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug