REGRESSION (r242687): Flicker when pinch-zooming pages in macOS Safari https://bugs.webkit.org/show_bug.cgi?id=196126 rdar://problem/49095791

Reviewed by Antti Koivisto.

The scrolling tree doesn't have an accurate picture of the main view's scroll position
during pinch-zooming, so don't have it apply layer positions if a transient zoom is
in progress.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.h:
* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::flushLayers):
(WebKit::TiledCoreAnimationDrawingArea::applyTransientZoomToPage):

Canonical link: https://commits.webkit.org/210443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243381 268f45cc-cd09-0410-ab3c-d52691b4dbfc